--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,110 @@
-﻿################################################################################
-# Este arquivo .gitignore foi criado automaticamente pelo Microsoft(R) Visual Studio.
-################################################################################
+﻿############################
+# .NET / Build
+############################
+bin/
+obj/
+[Bb]uild/
+artifacts/
+publish/
 
-/.vs/ProjectEvaluation
-/.vs/Projeto Toolkit .NET/CopilotIndices/17.14.1091.29919
-/.vs/Projeto Toolkit .NET/FileContentIndex
-/.vs/Projeto Toolkit .NET/v17
-/.vs/projeto-toolkit/v17
-*.json
+# Logs
+logs/
+*.log
+*.etl
+*.dmp
+
+# Testes / Cobertura / Benchmarks
+TestResults/
+*.trx
+*.coverage
+*.coveragexml
+coverage/
+BenchmarkDotNet.Artifacts/
+
+############################
+# IDEs
+############################
+# Visual Studio
+.vs/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Rider / JetBrains
+.idea/
+*.sln.iml
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
+
+# VS Code (compartilhe extensões recomendadas se quiser)
+.vscode/
+!.vscode/extensions.json
+
+############################
+# NuGet
+############################
+*.nupkg
+*.snupkg
+*.nuspec
+.nuget/
+packages/
+**/packages/*/
+!**/packages/build/
+!**/packages/repositories.config
+project.lock.json
+project.fragment.lock.json
+
+############################
+# Publicação / Perfis
+############################
+# perfis com dados de máquina/usuário
+*.pubxml.user
+**/Properties/PublishProfiles/*.pubxml.user
+
+############################
+# Configs locais / segredos
+############################
+# mantenha appsettings.json no repo; ignore variações locais
+appsettings.*.local.json
+secrets.json
+.env
+.env.*
+
+# Certificados / chaves (se aplicável)
+*.pfx
+*.p12
+*.cer
+*.key
+*.secrets
+
+############################
+# Ferramentas / temporários
+############################
+.localhistory/
+.ncrunchsolution*
+_nCrunch_*
+.*crunch*.local.xml
+StyleCop.Cache
+.cache/
+*.tmp
+*.temp
+~$*
+
+############################
+# SO
+############################
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# macOS
+.DS_Store
+.AppleDouble
+LSOverride
+Icon?
+
+# Linux
+*~
